operator/operator-cli/packages/zarf_ray_tl/chat-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chat-ingress-route-insecure
spec:  
  entryPoints:
    - web

  routes:
    - match: Host(`###ZARF_VAR_HOSTNAME###`)
      kind: Rule
      middlewares:
        - name: redirect-https-middleware
      services:
        - name: open-webui
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chat-ingress-route
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`###ZARF_VAR_HOSTNAME###`)
      kind: Rule
      middlewares:
        - name: security-headers-middleware
      services:
        - name: open-webui
          port: 80
  tls:
    secretName: chat-example-server-cert
    options:
      name: tlsoptions
